Starting to type given passed type collected at runtime.

--- a/.settings/org.python.pydev.yaml
+++ b/.settings/org.python.pydev.yaml
@@ -1,15 +1,21 @@
-TRIM_EMPTY_LINES: true
-AUTOPEP8_PARAMETERS: ''
-USE_ASSIGN_WITH_PACES_INSIDER_PARENTESIS: false
-FORMAT_WITH_AUTOPEP8: false
-SPACES_BEFORE_COMMENT: '2'
 ADD_NEW_LINE_AT_END_OF_FILE: true
-MANAGE_BLANK_LINES: true
-BLANK_LINES_TOP_LEVEL: 2
-USE_SPACE_AFTER_COMMA: true
+AUTOPEP8_PARAMETERS: -a -a --max-line-length=100 --ignore=E309
 BLANK_LINES_INNER: 1
-TRIM_MULTILINE_LITERALS: true
-USE_SPACE_FOR_PARENTESIS: false
-FORMAT_ONLY_CHANGED_LINES: true
-USE_OPERATORS_WITH_SPACE: true
+BLANK_LINES_TOP_LEVEL: 2
+DATE_FIELD_FORMAT: yyyy-MM-dd
+DATE_FIELD_NAME: __updated__
+ENABLE_DATE_FIELD_ACTION: false
+FORMAT_BEFORE_SAVING: true
+FORMAT_ONLY_CHANGED_LINES: false
+FORMAT_WITH_AUTOPEP8: false
+MANAGE_BLANK_LINES: true
+SAVE_ACTIONS_ONLY_ON_WORKSPACE_FILES: true
+SORT_IMPORTS_ON_SAVE: true
+SPACES_BEFORE_COMMENT: '2'
 SPACES_IN_START_COMMENT: '1'
+TRIM_EMPTY_LINES: true
+TRIM_MULTILINE_LITERALS: true
+USE_ASSIGN_WITH_PACES_INSIDER_PARENTESIS: false
+USE_OPERATORS_WITH_SPACE: true
+USE_SPACE_AFTER_COMMA: true
+USE_SPACE_FOR_PARENTESIS: false
